# cflappy

./: CMakeLists.txt  README.md  background.c  background.h  bird.c  bird.h  embuild.sh  endgamescreen.c  endgamescreen.h  game.c  game.h  main.c  readyscreen.c  readyscreen.h  sdlutils.c  sdlutils.h  startscreen.c  startscreen.h  walls.c  walls.h
cmake/: FindSDL_gfx.cmake
